kubernetes/apps/ronin/frontend-ui/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ronin-ui
  labels:
    app.kubernetes.io/name: ronin-ui
    app.kubernetes.io/instance: ronin-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ronin-ui
      app.kubernetes.io/instance: ronin-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ronin-ui
        app.kubernetes.io/instance: ronin-ui
    spec:
      containers:
      - name: ronin-ui
        image: ghcr.io/ronin-cg/frontend-ui:caf175a
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /zhealth
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /zhealth
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        command: ["/usr/app/entrypoint.sh"]
      imagePullSecrets:
        - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ronin-ui
spec:
  selector:
    app.kubernetes.io/name: ronin-ui
    app.kubernetes.io/instance: ronin-ui
  ports:
    - name: http
      protocol: TCP
      port: 5173
      targetPort: 80
